Prevent from occurring line break in `th`

--- a/src/components/layouts/Arguments/index.css
+++ b/src/components/layouts/Arguments/index.css
@@ -30,6 +30,7 @@
   font-size: var(--base-font-size);
   font-weight: lighter;
   text-align: center;
+  white-space: nowrap;
 }
 
 .Arguments td {
